--- a/test/fixtures/subscribers.yml
+++ b/test/fixtures/subscribers.yml
@@ -1,9 +1,3 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  product: one
-  email: MyString
-
-two:
-  product: two
-  email: MyString
+david:
+  product: tshirt
+  email: david@local.host
